--- a/m3_test_deploy_aks.yml
+++ b/m3_test_deploy_aks.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: isens-m3-iqualimeter-container
-          image: isensacr.azurecr.io/isens-m3-py
+          image: isensacr.azurecr.io/isens-m3-py:1.0.0
           ports:
             - containerPort: 5000
